--- a/assets/css/feed.css
+++ b/assets/css/feed.css
@@ -7,7 +7,8 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 10rem;
-    margin-left: -6rem;
+    margin-left: -2rem;
+    margin-right: -2rem;
 }
 .card {
     border: 1px solid var(--btn-terracota);
@@ -98,7 +99,10 @@ footer {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         row-gap: 1.5rem;
+        margin-left: -9rem;
+        margin-right: 4rem;
     }
+
     .card {
         width: 95%;
         margin-bottom: 0;
