--- a/assets/css/login-senha.css
+++ b/assets/css/login-senha.css
@@ -3,42 +3,16 @@ body {
     min-height: 100vh;
 }
 
-.cadlog-centro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2rem;
-}
-
-.logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.plant-icon {
-    width: 5rem;
-}
-
-h1 {
-    font-family: var(--font-logo);
-    font-size: 4rem;
-}
-
-.subtitle {
-    font-size: 2rem;
-}
-
 .boas-vindas {
     font-size: 1.8rem;
     margin-top: 3rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .senha {
     margin: 0 auto;
     margin-top: 1rem;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     color: var(--light-pink);
     text-decoration: underline;
 }
@@ -56,22 +30,24 @@ h1 {
 .btn-entrar {
     background-color: var(--btn-terracota);
     width: 8rem;
+    padding: 0.5rem;
 }
 
 .btn-cadastre-se {
     background-color: var(--btn-yellow);
     width: 12rem;
+    padding: 0.5rem;
 }
 
 footer {
     bottom: 0;
 }
-/* esqueci minha senha */
+/* página esqueci minha senha */
 
 
 h2 {
     margin-top: 1.5rem;
-    font-size: 2.5rem;
+    font-size: 1.6rem;
 }
 
 .texto-senha {
@@ -83,7 +59,7 @@ h2 {
 .btn-senha {
     background-color: var(--btn-terracota);
     width: 20rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .btn-voltar-login {
@@ -106,8 +82,11 @@ html, body {
     overflow: hidden;
 }
     
+.senha {
+    font-size: 1.4rem;
+}
 .boas-vindas {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
@@ -116,13 +95,14 @@ html, body {
     font-size: 1.6rem;
     margin-bottom: -1rem;
 }
+
+/* página esqueci minha senha */
 .btn-senha {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
-/* esqueci minha senha */
 
 h2 {
-    font-size: 2rem;
+    font-size: 1rem;
 }
 
 }
