--- a/assets/css/menu-search.css
+++ b/assets/css/menu-search.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 2rem;
     left: 0; 
-    width: 95%;
+    width: 87%;
     display: flex;
     align-items: center;
     margin-top: 2rem;
@@ -111,6 +111,7 @@
         width: 20rem;
         border-top: none;
         border-right: 2px solid var(--btn-terracota);
+        background: none;             
     }
     
     .menu-lateral ul {
