--- a/assets/css/explorar.css
+++ b/assets/css/explorar.css
@@ -12,12 +12,12 @@
 }
 
 .cultivando h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .cultivando img {
     width: 15rem;
-    margin-top: 1rem;
+    margin-top: 5rem;
 }
 
 footer {
@@ -32,6 +32,14 @@ footer {
 
     .cultivando {
         grid-column: 2/3;
+    }
+
+    .cultivando h1 {
+        font-size: 2rem;
+    }
+    .cultivando img {
+        width: 15rem;
+        margin-top: 3rem;
     }
     
     footer {
