--- a/assets/css/logo.css
+++ b/assets/css/logo.css
@@ -12,13 +12,14 @@
 }
 
 .plant-icon {
-    margin-top: 3rem;
-    width: 4rem;
+    margin-top: 1rem;
+    margin-bottom: -1rem;
+    width: 3.5rem;
 }
 
 h1 {
     font-family: var(--font-logo);
-    font-size: 4rem;
+    font-size: 4.5rem;
 }
 
 .subtitle {
@@ -36,10 +37,10 @@ h1 {
 
 h1 {
     font-family: var(--font-logo);
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
     
 .subtitle {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 }
